# unify

./: README.md  package.yaml  stack.yaml  unify.cabal
src/: Examples.hs  Main.hs  Match.hs  Term.hs  Unify.hs
test/: Examples.hs  Spec.hs
