name:                unify
version:             0.1.0.0
-- synopsis:
description:         Implementation of unification (Martelli + Montanari, 1982) 
license:             BSD3
license-file:        LICENSE
author:              Oliver Westphal
maintainer:          o_westphal (at) online (dot) de
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Unify, Match
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9, transformers
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
